fixed bottom audio covered by footer/band name covered by audio in mobile for some browsers

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -385,14 +385,22 @@ audio {
     margin: 10px auto 60px auto;
     width: 200px;
     display: block;
+    -webkit-transform: translateY(100px);
+    -ms-transform: translateY(100px);
     transform: translateY(100px);
     position: relative;
     z-index: 1;
 }
 
+.last-audio{
+        padding-bottom:100px;
+    }
+
 .album-image {
     height: 200px;
     width: 200px;
+    -webkit-transform: translateY(100px);
+    -ms-transform: translateY(100px);
     transform: translateY(100px);
     margin-left: auto;
     margin-right: auto;
@@ -404,17 +412,25 @@ audio {
     font-weight: 300;
     color: #ffffff;
     text-align: center;
+    -webkit-transform: translateY(100px);
+    -ms-transform: translateY(100px);
     transform: translateY(100px);
 }
 
 @media (max-width:768px) {
-    .albumn-name {
+    .album-name {
+        -webkit-transform: translateY(50px);
+        -ms-transform: translateY(50px);
         transform: translateY(50px);
     }
     .album-image {
+        -webkit-transform: translateY(50px);
+        -ms-transform: translateY(50px);
         transform: translateY(50px);
     }
     audio {
+        -webkit-transform: translateY(50px);
+        -ms-transform: translateY(50px);
         transform: translateY(50px);
     }
 }
@@ -442,8 +458,8 @@ audio {
     margin: 50px auto;
 }
 
-.carousel-indicators{
-  z-index:1;
+.carousel-indicators {
+    z-index: 1;
 }
 
 .carousel-control.left {
